Bug 1516101 - Don't use locale-specific AppendPrintf() to print float values, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D15836

--HG--
extra : moz-landing-system : lando